--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:id="@+id/game"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="gameBtn"
         android:text="GAME" />
 
 </LinearLayout>
