--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -58,6 +58,8 @@
             android:layout_width="match_parent"
             android:id="@+id/table_container"
             android:layout_height="wrap_content"
+            android:padding="0dp"
+            android:layout_margin="0dp"
             >
 
 
