--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.mika.nineteen.Main2Activity">
+    android:padding="16dp"
+    tools:context="ru.maryonegames.android.nineteen.Main2Activity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,44 +15,52 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tv1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="TextView" />
+            android:gravity="center"
+            android:textSize="20sp"
+            android:text="Score" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tvscore"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="TextView" />
+            android:gravity="center"
+            android:textSize="20sp"
+            android:text="0"/>
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tv2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="TextView" />
+            android:gravity="center"
+            android:textSize="20sp"
+            android:text="LeftNumbers" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/tvleft"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="TextView" />
+            android:gravity="center"
+            android:textSize="20sp"
+            android:text="" />
 
     </LinearLayout>
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="19"
+        android:layout_weight="16"
         >
 
         <TableLayout
@@ -59,10 +68,59 @@
             android:id="@+id/table_container"
             android:layout_height="wrap_content"
             android:padding="0dp"
+            android:background="#000"
+
             android:layout_margin="0dp"
             >
 
 
         </TableLayout>
     </ScrollView>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/btn_hint"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            style="@style/ButtonStyle"
+            android:onClick="showHint"
+            android:src="@drawable/hint2"
+            android:scaleType="centerInside"
+            android:text="Hint" />
+
+        <ImageButton
+            android:id="@+id/btn_undo"
+            style="@style/ButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:onClick="undoStep"
+            android:src="@drawable/undo"
+            android:scaleType="centerInside"
+            android:text="Undo" />
+
+        <ImageButton
+            android:id="@+id/btn_save"
+            style="@style/ButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:onClick="saveGame"
+            android:src="@drawable/save"
+            android:scaleType="centerInside"
+            android:text="Save" />
+
+    </LinearLayout>
+
 </LinearLayout>
